--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "cheerio": "^1.0.0",
     "cors": "^2.8.5",
     "express": "^4.21.1",
-    "body-parser": "^1.20.3"
+    "body-parser": "^1.20.3",
+    "serve-favicon": "^2.5.0"
   }
 }
